kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: belong-app-service
spec:
  type: NodePort
  ports:
    - targetPort: 80
      *port: 80
      nodePort: 30005
    - targetPort: 443
      *port: 443
      nodePort: 30006
  selector:
    matchLabels:
      app: belong-app
